--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -12,43 +12,119 @@
   </head>
   <body>
     <nav class="">
-      <!-- <ul>
-        <li id="to-left">
-          <p><a href="/"> Users - demo </a></p>
-        </li>
-        <li id="to-right">
-          <a href="/signup">Signup</a>
-          <span> | </span>
-          <a href="/login">Login</a>
-          <span> | </span>
-          <form id="logout-form" action="/logout" method="POST">
-            <button>Logout</button>
-          </form>
-          <a href="/userProfile">Profile</a>
-        </li>
-      </ul> -->
       <div class="wrapper navContent">
         <div class="logo">
           <img src="/public/images/bonsai-logo-black.png" alt="" />
           <span>BonsaiBranch</span>
         </div>
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="#">Shop</a></li>
           <li><a href="#">FAQ</a></li>
+          <li class="loginIcon"><a href="/signup">Sign up</a></li>
+          <li class="loginIcon"><a href="/login">Login</a></li>
         </ul>
         <ul class="navIcons">
-          <li class="loginIcon"><a href="#">Login</a></li>
+    
           <li>
             <a href="#"><img src="/public/images/cart.svg" alt="cart" /></a>
           </li>
           <li>
-            <a href="#"><img src="/public/images/user.svg" alt="cart" /></a>
+            <a href="/userProfile"
+              ><img src="/public/images/user.svg" alt="cart"
+            /></a>
           </li>
         </ul>
       </div>
     </nav>
-    <!-- <img src="/public/images/cart.svg" alt="cart" /> -->
-    <!-- <h3>test</h3> -->
+    <div class="shop wrapper">
+      <h1>Shop Trees</h1>
+      <div class="productsGrid">
+        <div class="producContainer">
+          <a href="#"><img src="/public/images/bonsai/red-maple-4.png" alt="" /></a>
+          <div class="productTextContainer">
+            <h2>Desojo</h2>
+            <span>3000$</span>
+          </div>
+        </div>
+        <div class="producContainer">
+           <a href="#"> <img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/red-maple-3.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Red Maple</h2>
+              <span>4000$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+           <a href="#"> <img src="/public/images/bonsai/red-maple-2.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Seigen</h2>
+              <span>2700$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>3500$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+           <a href="#"> <img src="/public/images/bonsai/chinese-elm-2.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>1800$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/red-maple-4.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href=""><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+          <div class="producContainer">
+            <a href="#"><img src="/public/images/bonsai/chinese-elm-1.png" alt="" /></a>
+            <div class="productTextContainer">
+              <h2>Chinese Elm</h2>
+              <span>2200$</span>
+            </div>
+          </div>
+       
+    </div>
   </body>
 </html>
