--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -36,5 +36,32 @@
         </ul>
       </div>
     </nav>
+    <!-- <div class="wrapper">
+      <form action="/signup" method="POST" class="form">
+        <h1>Signup</h1>
+        <div class="inputContainer">
+          <label> Username </label>
+          <br />
+          <input type="text" name="username" placeholder="Username" />
+        </div>
+        <div class="inputContainer">
+          <label> Email </label>
+          <br />
+          <input
+            type="email"
+            name="email"
+            placeholder="rockstar@ironhack.com"
+          />
+        </div>
+        <div class="inputContainer">
+          <label> Password </label> <br />
+          <input type="password" name="password" placeholder="********" />
+        </div>
+
+        <button class="button" type="submit">Create account</button>
+
+        <p class="error">{{errorMessage}}</p>
+      </form>
+    </div> -->
   </body>
 </html>
