--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -36,32 +36,33 @@
         </ul>
       </div>
     </nav>
-    <!-- <div class="wrapper">
-      <form action="/signup" method="POST" class="form">
-        <h1>Signup</h1>
-        <div class="inputContainer">
-          <label> Username </label>
-          <br />
-          <input type="text" name="username" placeholder="Username" />
-        </div>
-        <div class="inputContainer">
-          <label> Email </label>
-          <br />
-          <input
-            type="email"
-            name="email"
-            placeholder="rockstar@ironhack.com"
-          />
-        </div>
-        <div class="inputContainer">
-          <label> Password </label> <br />
-          <input type="password" name="password" placeholder="********" />
-        </div>
+    <div class="wrapper">
+      <!-- <h1>single Article Page</h1> -->
+      <div class="singleProducContainer">
+        <img src="/public/images/bonsai/chinese-elm-1.png" alt="" />
 
-        <button class="button" type="submit">Create account</button>
-
-        <p class="error">{{errorMessage}}</p>
-      </form>
-    </div> -->
+        <div class="singleProductTextContainer">
+          <div class="topSection">
+            <div class="singleProductHeaderContainer">
+              <span class="storeIcon">Bonsai Store</span>
+              <h1>Chinese Elm</h1>
+            </div>
+            <p>
+              The Chinese Elm bonsai is a graceful and adaptable tree. Its
+              glossy leaves, branches, and textured bark create an elegant
+              aesthetic. It thrives in various styles and environments, making
+              it a popular choice. With proper care, this miniature tree brings
+              beauty and tranquility to any bonsai collection.
+            </p>
+          </div>
+          <div class="bottomSection">
+            <div class="priceAndButtonContainer">
+              <span class="priceValue">$2000</span>
+              <button class="button">Add to cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
