user-page frontend is in the testing html but not in the handlebars yet

--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -63,7 +63,7 @@
         <p class="error">{{errorMessage}}</p>
       </form>
     </div> -->
-    <div class="wrapper shoppingcart">
+    <!-- <div class="wrapper shoppingcart">
       <h1>Your cart</h1>
       <ul>
         <li>
@@ -107,6 +107,21 @@
         <h2 class="totalAmount">Total: 6000$</h2>
         <button class="button">Checkout</button>
       </div>
+    </div> -->
+    <div class="wrapper userPage">
+      <h1>Welcome, Alex!</h1>
+      <div class="userAccount">
+        <p>This is your profile page my friend!</p>
+        <button class="button">
+          <img src="/public/images/cart-white.svg" alt="" />
+          <a href="/userProfile">View cart</a>
+        </button>
+        <button class="button logoutButton">
+          <a href="/userProfile">Log out</a>
+        </button>
+      </div>
+      <br />
+      <p>Still no logged in user, sorry!</p>
     </div>
   </body>
 </html>
