finished with the frontend of the shopping carrt

--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -119,9 +119,9 @@
         <button class="button logoutButton">
           <a href="/userProfile">Log out</a>
         </button>
+        <a class="changeBtn" href="#">Change Settings</a>
       </div>
       <br />
-      <p>Still no logged in user, sorry!</p>
     </div>
   </body>
 </html>
