--- a/public/stylesheets/testing.html
+++ b/public/stylesheets/testing.html
@@ -108,7 +108,7 @@
         <button class="button">Checkout</button>
       </div>
     </div> -->
-    <div class="wrapper userPage">
+    <!-- <div class="wrapper userPage">
       <h1>Welcome, Alex!</h1>
       <div class="userAccount">
         <p>This is your profile page my friend!</p>
@@ -122,6 +122,25 @@
         <a class="changeBtn" href="#">Change Settings</a>
       </div>
       <br />
+    </div> -->
+    <div class="wrapper homePage">
+      <h1>BonsaiBranch 盆栽支店</h1>
+      <div class="heroSectionTextContainer">
+        <p>
+          <b> Welcome to our Bonsai Online Shop</b>, where the ancient art of
+          bonsai cultivation meets modern convenience. Step into a world where
+          nature's elegance is meticulously crafted and nurtured, bringing you
+          miniature masterpieces that embody tranquility and harmony. At our
+          online shop, we offer a diverse collection of bonsai trees, carefully
+          curated to cater to beginners and seasoned enthusiasts alike.
+        </p>
+        <!-- <button class="button">Shop trees →</button> -->
+        <a class="button" href="#">Shop trees →</a>
+      </div>
+      <div class="heroImageContainer">
+        <img src="/public/images/bonsai/home1.png" alt="" />
+        <span class="treeDes">Juniper Bonsai ‒ ジュニパー</span>
+      </div>
     </div>
   </body>
 </html>
